[package]
name = "pounce-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
description = "Command-line driver for POUNCE — solves built-in TNLPs and AMPL .nl files."
keywords = ["ipopt", "cli", "ampl", "nlp", "optimization"]
categories = ["mathematics", "command-line-utilities", "science"]

build = "build.rs"

[[bin]]
name = "pounce"
path = "src/main.rs"

# `pounce_sens` is a backward-compatibility alias for the older
# `pounce_sens <in.nl> <out.sol>` invocation. The sensitivity step is
# now part of the main `pounce` binary (auto-detected from the `.nl`
# suffixes); this binary is a thin shim that re-exports `main.rs`,
# kept only so existing AMPL/solver scripts that name `pounce_sens`
# keep working.
[[bin]]
name = "pounce_sens"
path = "src/bin/pounce_sens.rs"

# `pounce_cblib` solves a CBLIB Conic Benchmark Format (.cbf) instance
# through the convex conic driver and emits a pounce.solve-report/v1 JSON
# report. Used by the benchmarks/cblib harness (conic tier).
[[bin]]
name = "pounce_cblib"
path = "src/bin/pounce_cblib.rs"

[dependencies]
pounce-common.workspace = true
pounce-nlp = { workspace = true, features = ["serde"] }
pounce-nl.workspace = true
pounce-algorithm.workspace = true
pounce-restoration.workspace = true
pounce-feral.workspace = true
pounce-hsl = { workspace = true, optional = true }
pounce-linsol.workspace = true
pounce-presolve.workspace = true
pounce-linalg.workspace = true
pounce-sensitivity.workspace = true
pounce-solve-report.workspace = true
pounce-studio-core.workspace = true
pounce-observability.workspace = true
# Specialized convex LP/QP interior-point solver, dispatched to for
# classified LP / convex-QP `.nl` inputs.
pounce-convex.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing.workspace = true
anstream.workspace = true
anstyle.workspace = true
# Multistart / find-minima sampling (`--minima`). `rand_chacha` gives a
# seedable, portable PRNG (reproducible runs under `--seed`); `sobol_burley`
# is an Owen-scrambled Sobol' source matching scipy's `qmc.Sobol(scramble=True)`
# used by `pounce.find_minima`.
rand = "0.8"
rand_chacha = "0.3"
sobol_burley = "0.5"
# Line editing for the interactive debugger REPL (`--debug`): history,
# Ctrl-R search, and Tab completion. Only used on an interactive TTY;
# piped input and `--debug-json` fall back to a plain line reader.
rustyline = { version = "14", features = ["derive"] }
# SIGINT handler so Ctrl-C during a debug run breaks into the debugger
# at the next iteration (second Ctrl-C aborts). Already in the tree.
nix = { version = "0.28", features = ["signal"] }

[features]
default = []
# Enable the HSL MA57 backend (requires libcoinhsl). When enabled, also
# turns on the matching feature in pounce-algorithm so the option
# `linear_solver = ma57` resolves to MA57 instead of falling back to FERAL.
ma57 = ["dep:pounce-hsl", "pounce-algorithm/ma57"]

[lints]
workspace = true
