[package]
name = "pounce-convex"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
description = "Interior-point solvers for the convex problem classes in POUNCE: LP and convex QP today, with cone-generic scaffolding (Mehrotra + HSDE, SOCP/exp/pow/SDP) planned. Shares the pounce-linsol sparse symmetric factorization backbone with the NLP path."
keywords = ["lp", "qp", "interior-point", "convex-optimization", "solver"]
categories = ["mathematics", "science"]

[dependencies]
pounce-common.workspace = true
pounce-linsol.workspace = true
# Dense symmetric eigensolver (cyclic Jacobi) for the QP reduced Hessian,
# shared with the NLP sensitivity path.
pounce-linalg.workspace = true
# Data-parallel presolve (duplicate-row hashing); already a transitive
# workspace dependency via feral, so no new external crate is pulled in.
rayon = "1"

[dev-dependencies]
# FERAL backs the in-tree unit tests so the IPM runs end-to-end against
# a real sparse symmetric factorization without external solvers.
pounce-feral.workspace = true

[lints]
workspace = true
