[package]
name = "pounce-feral"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
description = "FERAL pure-Rust sparse symmetric LDL^T backend for POUNCE. Implements pounce-linsol's SparseSymLinearSolverInterface."
keywords = ["feral", "ldl", "linear-solver", "sparse", "ipopt"]
categories = ["mathematics", "algorithms"]

[dependencies]
pounce-common.workspace = true
pounce-linsol.workspace = true
feral.workspace = true
tracing.workspace = true

[lints]
workspace = true
