[package]
name = "pounce-lean-cert"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
description = "Exact-rational `pounce.lean-cert/v1` certificate emitter for convex-QP global-min solves, kernel-checkable by the pounce-lean repo."
keywords = ["solver", "certificate", "lean", "verification", "qp"]
categories = ["mathematics", "science"]

[dependencies]
num-bigint = "0.4"
num-rational = { version = "0.4", default-features = false, features = ["std", "num-bigint"] }
num-traits = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
