[package]
name = "pounce-linsol"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
description = "Symmetric linear-solver trait layer for POUNCE (port of Ipopt's Algorithm/LinearSolvers/Ip{SymLinearSolver,SparseSymLinearSolverInterface,TSymLinearSolver,TSymScalingMethod,TripletToCSRConverter}). No FFI; concrete backends are pounce-feral (the pure-Rust sparse LDLᵀ default) and the optional pounce-hsl (MA57)."
keywords = ["linear-solver", "sparse", "symmetric", "ldl", "ipopt"]
categories = ["mathematics", "algorithms"]

[dependencies]
pounce-common.workspace = true
pounce-linalg.workspace = true
tracing.workspace = true

[lints]
workspace = true
