[package]
name = "pounce-py"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
description = "Python bindings for POUNCE — cyipopt-compatible Problem class, scipy-style minimize() facade, and JAX-friendly autodiff/implicit-differentiation helpers. Built with PyO3 + maturin."
keywords = ["ipopt", "python", "cyipopt", "optimization", "nlp"]
categories = ["mathematics", "api-bindings", "science"]
# Shipped to PyPI as `pounce-solver` via maturin (see python/ and
# .github/workflows/release-pounce.yml), not to crates.io.
publish = false

[lib]
name = "_pounce"
crate-type = ["cdylib", "rlib"]

[features]
# `extension-module` is required when building the wheel via maturin (it
# avoids linking libpython, which is wrong for a Python extension on
# most platforms). It is *not* set in plain `cargo build` so workspace
# CI keeps compiling without a Python interpreter on PATH.
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
pounce-common.workspace = true
pounce-nlp.workspace = true
pounce-nl.workspace = true
pounce-algorithm.workspace = true
pounce-qp.workspace = true
pounce-convex.workspace = true
pounce-global.workspace = true
pounce-restoration.workspace = true
pounce-feral.workspace = true
pounce-linsol.workspace = true
pounce-sensitivity.workspace = true
pounce-observability.workspace = true
tracing.workspace = true
pyo3 = { version = "0.22", features = ["abi3-py39"] }
numpy = "0.22"

[lints]
workspace = true
