[package]
name = "pounce-qp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
description = "Sparse parametric active-set quadratic programming subproblem solver for POUNCE. Drives the active-set SQP NLP path and the parametric corrector inside pounce-sensitivity."
keywords = ["qp", "quadratic-programming", "active-set", "sqp", "solver"]
categories = ["mathematics", "science"]

[dependencies]
pounce-common.workspace = true
pounce-linalg.workspace = true
pounce-linsol.workspace = true

[dev-dependencies]
# FERAL backs the in-tree unit tests so the analytical ladder runs
# end-to-end without external solvers. Production callers
# (pounce-algorithm, pounce-sensitivity) construct their own backend
# and pass it to `ParametricActiveSetSolver::new`.
pounce-feral.workspace = true

[lints]
workspace = true
