[package]
name = "pounce-restoration"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
description = "Restoration phase for POUNCE (port of Ipopt's Algorithm/Resto*): RestoIpoptNLP, RestoMinC_1Nrm, RestoFilterConvCheck, etc. Phase 9 — currently scaffolded with trait surface and stubbed strategies; full implementation lands incrementally."

[dependencies]
pounce-common = { path = "../pounce-common" }
pounce-linalg = { path = "../pounce-linalg" }
pounce-nlp = { path = "../pounce-nlp" }
pounce-algorithm = { path = "../pounce-algorithm" }
pounce-linsol = { path = "../pounce-linsol" }

[dev-dependencies]
pounce-feral = { path = "../pounce-feral" }

[lints]
workspace = true
