[package]
name = "pounce-restoration"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
description = "Restoration phase for POUNCE (port of Ipopt's Algorithm/Resto*): RestoIpoptNLP, RestoMinC_1Nrm, RestoFilterConvCheck, etc. Phase 9 — currently scaffolded with trait surface and stubbed strategies; full implementation lands incrementally."
keywords = ["ipopt", "restoration", "nlp", "optimization", "feasibility"]
categories = ["mathematics", "algorithms"]

[dependencies]
pounce-common.workspace = true
pounce-linalg.workspace = true
pounce-nlp.workspace = true
pounce-algorithm.workspace = true
pounce-linsol.workspace = true
tracing.workspace = true

[dev-dependencies]
pounce-feral.workspace = true

[lints]
workspace = true
