[package]
name = "pounce-restoration"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
description = "Restoration phase for POUNCE (port of Ipopt's Algorithm/Resto*): RestoIpoptNLP, RestoMinC_1Nrm, RestoFilterConvCheck, etc. Implemented and wired into the solve — the filter line search routes failed steps into the nested feasibility sub-IPM. Remaining Phase-10 work: upstream bit-equivalence of the restoration Hessian assembly and full recovery-trace validation."
keywords = ["ipopt", "restoration", "nlp", "optimization", "feasibility"]
categories = ["mathematics", "algorithms"]

[dependencies]
pounce-common.workspace = true
pounce-linalg.workspace = true
pounce-nlp.workspace = true
pounce-algorithm.workspace = true
pounce-linsol.workspace = true
tracing.workspace = true

[dev-dependencies]
pounce-feral.workspace = true

[lints]
workspace = true
