[package]
name = "pounce-simplex"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
description = "Bounded-variable revised primal/dual simplex LP solver for POUNCE: warm-startable from a basis, built for the spatial branch-and-bound OBBT inner loop (same-polytope/objective-flip LPs)."
keywords = ["simplex", "linear-programming", "optimization", "lp", "warm-start"]
categories = ["mathematics", "algorithms"]

[dependencies]
# Sparse LU factorization for the revised-simplex basis (Phase 6.2). faer
# supplies the numerically-hard part — sparse LU with partial pivoting — while
# the per-pivot rank-1 (product-form) basis update stays in-house, since no
# general LU library offers it. See dev-notes/simplex-phase6.2-faer-lu.md.
faer = { workspace = true, features = ["sparse-linalg"] }

[lints]
workspace = true
